--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,12 +6,12 @@
 				<li class="item-map"><strong>Buscamos soluções criativas com processo de design para criar inovação.</strong></li>
 			</ul>
 			<ul class="list-map-site">
-				<li class="item-map"><a href="../{{ site.baseurl }}/">Home</a></li>
-				<li class="item-map"><a href="../{{ site.baseurl }}servicos">Serviços</a></li>
-				<li class="item-map"><a href="../{{ site.baseurl }}portfolio">Portfólio</a></li>
-				<li class="item-map"><a href="../{{ site.baseurl }}depoimentos">Depoimentos</a></li>
-				<li class="item-map"><a href="../{{ site.baseurl }}contato">Contato</a></li>
-				<li class="item-map"><a href="../{{ site.baseurl }}blog">Blog</a></li>
+				<li class="item-map"><a href="{{ site.baseurl }}/">Home</a></li>
+				<li class="item-map"><a href="{{ site.baseurl }}servicos">Serviços</a></li>
+				<li class="item-map"><a href="{{ site.baseurl }}portfolio">Portfólio</a></li>
+				<li class="item-map"><a href="{{ site.baseurl }}depoimentos">Depoimentos</a></li>
+				<li class="item-map"><a href="{{ site.baseurl }}contato">Contato</a></li>
+				<li class="item-map"><a href="{{ site.baseurl }}blog">Blog</a></li>
 			</ul>
 			<ul class="list-map-site">
 				<li class="item-map"><a href="tel:+5511976757107">+55 11 97675 7107</a></li>
@@ -33,10 +33,10 @@
 	</div>
 </footer>
 <script>
-	var GLOBAL_URL = "../{{ site.baseurl }}";
+	var GLOBAL_URL = "{{ site.baseurl }}";
 </script>
-<script type="text/javascript" src="../{{ site.baseurl }}assets/js/jquery-3.2.0.min.js"></script>
-<script type="text/javascript" src="../{{ site.baseurl }}assets/js/jquery.mask.min.js"></script>
-<script type="text/javascript" src="../{{ site.baseurl }}assets/js/jquery.validate.js"></script>
-<script type="text/javascript" src="../{{ site.baseurl }}assets/js/slick.min.js"></script>
-<script type="text/javascript" src="../{{ site.baseurl }}assets/js/scripts.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}assets/js/jquery-3.2.0.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}assets/js/jquery.mask.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}assets/js/jquery.validate.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}assets/js/slick.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}assets/js/scripts.js"></script>
